Fix yaml lint errors

--- a/packages/go-shadowsocks2.yaml
+++ b/packages/go-shadowsocks2.yaml
@@ -7,7 +7,8 @@ description: >-
   Features:
 
   - SOCKS5 proxy with UDP Associate
-  - Support for Netfilter TCP redirect on Linux (IPv6 should work but not tested)
+  - Support for Netfilter TCP redirect on Linux (IPv6 should work but not
+    tested)
   - Support for Packet Filter TCP redirect on MacOS/Darwin (IPv4 only)
   - UDP tunneling (e.g. relay DNS packets)
   - TCP tunneling (e.g. benchmark with iperf3)
