--- a/packages/replicant.yaml
+++ b/packages/replicant.yaml
@@ -30,14 +30,14 @@ links:
   url: "https://github.com/OperatorFoundation/shapeshifter-transports"
 - icon: "fas fa-book"
   label: "package documentation"
-  url: "https://github.com/OperatorFoundation/shapeshifter-transports/blob/main/transports/Replicant/v2/README.md"
+  url: "https://github.com/OperatorFoundation/Replicant-go/blob/main/README.md"
 - icon: "fas fa-bug"
   label: "report a problem"
   url: "https://github.com/OperatorFoundation/shapeshifter-transports/issues"
 versions:
-- id: "v2.2.11"
-  date: "2021-04-08"
-  url: "https://github.com/OperatorFoundation/shapeshifter-transports/releases/tag/transports%2FReplicant%2F2.2.11"
+- id: "v3.0.23"
+  date: "2023-21-09"
+  url: "https://github.com/OperatorFoundation/Replicant-go/releases/tag/v3.0.23"
 languages:
 - name: "Go"
 ---
