--- a/packages/meek.yaml
+++ b/packages/meek.yaml
@@ -26,7 +26,7 @@ links:
   url: "https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/meek/-/issues"
 maintainers:
 - name: "David Fifield"
-  contact: "david@bamsoftware.com"
+  contact: "dcf@torproject.org"
 versions:
 - id: "v0.38.0"
   date: "2022-28-10"
