--- a/packages/snowflake.yaml
+++ b/packages/snowflake.yaml
@@ -24,7 +24,7 @@ links:
   label: "report a problem"
   url: "https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake/-/issues"
 maintainers:
-- name: "David F"
+- name: "David Fifield"
   contact: "dcf@torproject.org"
 versions:
 - id: "v2.9.1"
