General updates, corrections, removed dead links.  (#19)
* Update shadowsocks-rust.yaml

Updated version information and download location

* Update obfs4.yaml

Updated version, date and download link

* Update shadowsocks-android.yaml

Updated version, date and download link

* Update ReplicantSwift.yaml

Updated version, date and download link

* Update meek.yaml

Updated version, time, download link

* Update replicant.yaml

Updated version, date, download link, package documentation link

* Update iptproxy.yaml

Updated version, date and download links.

* Update optimizer.yaml

Fixed repository broken link

* Update meek.yaml

fixed download link

* Update shadowsocksx-ng.yaml

Updated version, date and download link.

* Update shadowsocks.yaml

Updated repository link

* Update marionette.yaml

removed empty icon

* Update meek.yaml

Updated Maintainer email

* Update meek.yaml

fixed typo on link

* Update snowflake.yaml

Updated version, date, download link and maintainer

* Update shadowsocks-rust.yaml

Updated contact link

* Update shadowsocks-windows.yaml

Updated description

* Update iptproxy.yaml

Updated news link

* Update dnstt.yaml

Updated repository link and clarified license status

* Update lampshade.yaml

updated version info

* Update snowflake.yaml

Fixed maintainer

* Update dnstt.yaml

Updated License information

--- a/packages/meek.yaml
+++ b/packages/meek.yaml
@@ -26,11 +26,11 @@ links:
   url: "https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/meek/-/issues"
 maintainers:
 - name: "David Fifield"
-  contact: "david@bamsoftware.com"
+  contact: "dcf@torproject.org"
 versions:
-- id: "v0.37.0"
-  date: "2021-09-03"
-  url: "https://gitweb.torproject.org/pluggable-transports/meek.git/tree/?h=v0.37.0"
+- id: "v0.38.0"
+  date: "2022-28-10"
+  url: "https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/meek/-/tree/v0.38.0?h=v0.38.0&ref_type=tags"
 languages:
 - name: "Go"
 ---
