--- a/packages/shadowsocks-rust.yaml
+++ b/packages/shadowsocks-rust.yaml
@@ -21,11 +21,11 @@ links:
   url: "https://github.com/shadowsocks/shadowsocks-rust/issues"
 maintainers:
 - name: "Y. T. Chung"
-  contact: "zonyitoo@gmail.com"
+  contact: "https://github.com/zonyitoo"
 versions:
-- id: "v1.13.1"
-  date: "2022-29-01"
-  url: "https://github.com/shadowsocks/shadowsocks-rust/releases/tag/v1.13.1"
+- id: "v1.18.1"
+  date: "2024-18-02"
+  url: "https://github.com/shadowsocks/shadowsocks-rust/releases"
 languages:
 - name: "Rust"
 ---
