--- a/packages/shadowsocks-rust.yaml
+++ b/packages/shadowsocks-rust.yaml
@@ -5,7 +5,7 @@ description: >-
   This is a Rust port of shadowsocks.
 
   Shadowsocks is a fast tunnel proxy that helps you bypass firewalls.
-icon: "https://shadowsocks.org/assets/img/favicon/apple-touch-icon.png"
+icon: "https://github.com/Pluggable-Transports/Pluggable-Transports-software/raw/main/assets/pkg.png"
 links:
 - icon: "far fa-copyright"
   label: "MIT"
